--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="result">0</div>
+        <div class="resultBox">
+            <div class="tempResult"></div>
+            <div class="result">0</div>
+        </div>
+
         <div class="container">
             <button class="numbers">7</button>
             <button class="numbers">8</button>
@@ -24,7 +28,7 @@
             <button class="numbers">3</button>
             <button class="subtract">-</button>
             <button class="numbers">0</button>
-            <button class="decimal">.</button>
+            <button class="numbers decimal">.</button>
             <button class="operate">=</button>
             <button class="add">+</button>
         </div>
