--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <button class="numbers">7</button>
             <button class="numbers">8</button>
             <button class="numbers">9</button>
-            <button class="divide">÷</button>
+            <button class="operators">÷</button>
             <button class="numbers">4</button>
             <button class="numbers">5</button>
             <button class="numbers">6</button>
-            <button class="multiply">×</button>
+            <button class="operators">×</button>
             <button class="numbers">1</button>
             <button class="numbers">2</button>
             <button class="numbers">3</button>
-            <button class="subtract">-</button>
+            <button class="operators">-</button>
             <button class="numbers">0</button>
             <button class="numbers decimal">.</button>
-            <button class="operate">=</button>
-            <button class="add">+</button>
+            <button class="equals">=</button>
+            <button class="operators">+</button>
         </div>
     </div>
 
